feat: setup firebase auth and auth store

--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,8 @@
       "recommended": true,
       "nursery": {
         "useSortedClasses": {
-          "level": "error",
+          "level": "warn",
+          "fix": "safe",
           "options": {
             "attributes": ["classList"],
             "functions": ["clsx", "cva", "tw", "cn"]
