--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
