--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.4",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
