--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
     "start": "vite --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
-    "format": "biome format",
-    "format:imports": "biome check --formatter-enabled=false --linter-enabled=false --organize-imports-enabled=true --write",
-    "lint": "biome lint",
-    "check": "biome check",
-    "check:write": "biome check --write",
-    "check:staged": "biome check --error-on-warnings --no-errors-on-unmatched --staged",
+    "lint": "biome check --write",
     "prepare": "husky",
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.4",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -34,6 +31,7 @@
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
