--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/react-virtual": "^3.13.12",
     "@tanstack/router-plugin": "^1.114.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.9.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
