--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "clsx": "^2.1.1",
     "firebase": "^11.9.1",
     "lucide-react": "^0.476.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
     "react-markdown": "^10.1.0",
+    "react-pageflip": "^2.0.3",
     "react-qr-code": "^2.0.18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
