--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.0",
     "react-markdown": "^10.1.0",
+    "react-pageflip": "^2.0.3",
     "react-qr-code": "^2.0.18",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7",
